Add scss and complete index file

--- a/index.html
+++ b/index.html
@@ -36,63 +36,62 @@
 
 <!-- left navbar -->
 
-		<nav class="left-navbar">
-	      	<div class="left-nav-logo">
-	        	<a href="#link"><img src="https://i.ibb.co/r4ZDYLc/logo.png" alt="logo" border="0"></a>
-	        	<a href="#link" class="hamburger"><img src="https://i.ibb.co/bFkv9Sz/hamburger.png" alt="hamburger" border="0"></a>        
-	      	</div>
-	      	<div class="left-nav-li">
-		        <li>
-		            <a href="#link">
-		            <i class="far fa-star"></i>
-		            <span class="sidebar-title">General</span>
-		            </a>
-		        </li>
-		        <li>
-		            <a href="#link">
-		            <i class="fas fa-receipt"></i>
-		            <span class="sidebar-title">Details</span>
-		            </a>
-		        </li>
-		        <li>
-		            <a href="#link">
-		            <i class="fas fa-link"></i>
-		            <span class="sidebar-title">Links</span>
-		            </a>
-		        </li>  
-		        <li>
-		            <a href="#link">
-		            <i class="fas fa-tablet-alt"></i>
-		            <span class="sidebar-title">Banners</span>
-		            </a>
-		        </li>
-		        <li>
-		            <a href="#link">
-		            <i class="far fa-user"></i>
-		            <span class="sidebar-title">Personal data</span>
-		            </a>
-		        </li>
-		        <li>
-		            <a href="#link">
-		            <i class="far fa-star"></i>
-		            <span class="sidebar-title">Payout</span>
-		            </a>
-		        </li>
-		        <li>
-		            <a href="#link">
-		            <i class="fas fa-receipt"></i>
-		            <span class="sidebar-title">Postback</span>
-		            </a>
-		        </li>
-		        </ul> 
-	     	</div>
+	<nav class="left-navbar">
+	      <div class="left-nav-logo">
+	        <a href="#link"><img src="https://i.ibb.co/r4ZDYLc/logo.png" alt="logo" border="0"></a>
+	        <a href="#link" class="hamburger"><img src="https://i.ibb.co/bFkv9Sz/hamburger.png" alt="hamburger" border="0"></a>        
+	      </div>
+	      <div class="left-nav-div">
+	        <div class="left-menu-button">
+	            <a href="#link">
+	            <img src="images/icons/general.svg">
+	            <span class="sidebar-title">General</span>
+	            </a>
+	        </div>
+	        <div class="left-menu-button">
+	            <a href="#link">
+	            <img src="images/icons/details.svg">
+	            <span class="sidebar-title">Details</span>
+	            </a>
+	        </div>
+	        <div class="left-menu-button">
+	            <a href="#link">
+	            <img src="images/icons/links.svg">
+	            <span class="sidebar-title">Links</span>
+	            </a>
+	        </div>  
+	        <div class="left-menu-button">
+	            <a href="#link">
+	            <img src="images/icons/banners.svg">
+	            <span class="sidebar-title">Banners</span>
+	            </a>
+	        </div>
+	        <div class="left-menu-button">
+	            <a href="#link">
+	            <img src="images/icons/personaldata.svg">
+	            <span class="sidebar-title">Personal data</span>
+	            </a>
+	        </div>
+	        <div class="left-menu-button">
+	            <a href="#link">
+	            <img src="images/icons/payout.svg">
+	            <span class="sidebar-title">Payout</span>
+	            </a>
+	        </div>
+	        <div class="left-menu-button">
+	            <a href="#link">
+	            <img src="images/icons/postback.svg">
+	            <span class="sidebar-title">Postback</span>
+	            </a>
+	        </div> 
+	      </div>
 	      
-	      	<div class="left-nav-user">
-		        <h1>Your Manager</h1>
-		        <a href="#link"><img src="https://i.ibb.co/5Gk2fDH/photo.png" alt="photo" border="0"></a>
-		        <a href="#link" class="user-name-lnb">Mikhael E.</a>
-		    <div class="green-dot-left"></div>
-	    </div>    
+	      <div class="left-nav-user">
+	        <h1>Your Manager</h1>
+	        <a href="#link"><img src="https://i.ibb.co/5Gk2fDH/photo.png" alt="photo" border="0"></a>
+	        <a href="#link" class="user-name-lnb">Mikhael E.</a>
+	        <div class="green-dot-left"></div>
+	      </div>    
     </nav>
 
 <!-- container1 -->
@@ -128,6 +127,8 @@
 				<div class="component--calendar-frame3"></div>
 			</div>
 		</div>		
+
+<!-- small table -->
 
 		<div class="row">
 
