--- a/styleguide.html
+++ b/styleguide.html
@@ -66,50 +66,49 @@
 	        <a href="#link"><img src="https://i.ibb.co/r4ZDYLc/logo.png" alt="logo" border="0"></a>
 	        <a href="#link" class="hamburger"><img src="https://i.ibb.co/bFkv9Sz/hamburger.png" alt="hamburger" border="0"></a>        
 	      </div>
-	      <div class="left-nav-li">
-	        <li>
+	      <div class="left-nav-div">
+	        <div class="left-menu-button">
 	            <a href="#link">
-	            <i class="far fa-star"></i>
+	            <img src="images/icons/general.svg">
 	            <span class="sidebar-title">General</span>
 	            </a>
-	        </li>
-	        <li>
+	        </div>
+	        <div class="left-menu-button">
 	            <a href="#link">
-	            <i class="fas fa-receipt"></i>
+	            <img src="images/icons/details.svg">
 	            <span class="sidebar-title">Details</span>
 	            </a>
-	        </li>
-	        <li>
+	        </div>
+	        <div class="left-menu-button">
 	            <a href="#link">
-	            <i class="fas fa-link"></i>
+	            <img src="images/icons/links.svg">
 	            <span class="sidebar-title">Links</span>
 	            </a>
-	        </li>  
-	        <li>
+	        </div>  
+	        <div class="left-menu-button">
 	            <a href="#link">
-	            <i class="fas fa-tablet-alt"></i>
+	            <img src="images/icons/banners.svg">
 	            <span class="sidebar-title">Banners</span>
 	            </a>
-	        </li>
-	        <li>
+	        </div>
+	        <div class="left-menu-button">
 	            <a href="#link">
-	            <i class="far fa-user"></i>
+	            <img src="images/icons/personaldata.svg">
 	            <span class="sidebar-title">Personal data</span>
 	            </a>
-	        </li>
-	        <li>
+	        </div>
+	        <div class="left-menu-button">
 	            <a href="#link">
-	            <i class="far fa-star"></i>
+	            <img src="images/icons/payout.svg">
 	            <span class="sidebar-title">Payout</span>
 	            </a>
-	        </li>
-	        <li>
+	        </div>
+	        <div class="left-menu-button">
 	            <a href="#link">
-	            <i class="fas fa-receipt"></i>
+	            <img src="images/icons/postback.svg">
 	            <span class="sidebar-title">Postback</span>
 	            </a>
-	        </li>
-	        </ul> 
+	        </div> 
 	      </div>
 	      
 	      <div class="left-nav-user">
@@ -291,7 +290,7 @@
 			</div>
 
 			<div class="col-2">
-				<div class="component--button1">
+				<div class="compsonent--button1">
       				<div class="button1-style">+ Add new</div>
 				</div>
 			</div>
