--- a/index.html
+++ b/index.html
@@ -132,12 +132,8 @@
 
 		<div class="row">
 
-			<div class="col-2">
-				<div class="component--small-table-test"></div>
-			</div>
-			
-			<div class="col-4">
-				<div class="component--small-table">	
+			<div class="col-6">
+				<div class="component--small-table cst1">	
 					<table class="small-table2">
 		          		<tr>
 				            <td class="small-table-2-1strow">Visit singups</td>
@@ -151,8 +147,8 @@
 		      	</div>	
 			</div>
 
-			<div class="col-4">
-				<div class="component--small-table">
+			<div class="col-6">
+				<div class="component--small-table cst2">
 					<table class="small-table3">  
 				        <tr>
 				            <td class="small-table-2-1strow">Visit singups</td>
@@ -166,10 +162,6 @@
 				</div>	
 			</div>
 
-			<div class="col-2">
-				<div class="component--small-table-test"></div>
-			</div>
-	
 		</div>
 
 <!-- small header -->
