Add mobile settings

--- a/styleguide.html
+++ b/styleguide.html
@@ -415,6 +415,125 @@
 	
 	</div>
 
+<!-- form1 -->
+
+	<br><br>
+
+		<div class="container form-container">
+
+			<div class="form1col col-3">
+			</div>
+
+			<div class="col-6">
+				<form action="" method="POST">	  			
+			  		<div class="row">
+			  			<div class="col-5">
+			  				<label class="name-field">Name</label>
+			  			</div>
+			  			<div class="col-7">
+			  				<input class="input-filed" type="text" name="user-name">
+			  			</div>
+			  		</div>
+
+			  		<div class="row">
+			  			<div class="col-5">
+			  				<label class="name-field">Surname</label>
+			  			</div>
+			  			<div class="col-7">
+			  				<input class="input-filed" type="text" name="user-name">
+			  			</div>
+			  		</div>
+
+			  		<div class="row">
+			  			<div class="col-5">
+			  				<label class="name-field">E-mail</label>
+			  			</div>
+			  			<div class="col-7">
+			  				<input class="input-filed" type="email" name="user-name">
+			  			</div>
+			  		</div>
+
+			  		<div class="row">
+			  			<div class="col-5">
+			  				<label class="name-field">Telephone</label>
+			  			</div>
+			  			<div class="col-7">
+			  				<input class="input-filed" type="text" name="user-name">
+			  			</div>
+			  		</div>		
+				</form>
+			</div>	
+
+			<div class="form1col col-3">
+			</div>	
+
+		</div>	
+
+<!-- large table 2-->
+
+	<br><br><br><br>
+
+		<div class="large-table-2">
+			<div class="scroll-wrapper">
+				<table>
+					<tr class="lt2-headers">
+						<th>Date</th>
+						<th>Amount ($)</th>
+						<th>Deal</th>
+						<th>Account</th>	
+					</tr>
+					<tr class="lt2-rows">
+						<td>16/08/19 (15:42)</td>
+						<td>30,426 00</td>
+						<td>cpl (200)</td>
+						<td>bank</td>
+					</tr>
+					<tr class="lt2-rows">
+						<td>16/08/19 (15:42)</td>
+						<td>30,426 00</td>
+						<td>cpl (200)</td>
+						<td>bank</td>
+					</tr>
+					<tr class="lt2-rows">
+						<td>16/08/19 (15:42)</td>
+						<td>30,426 00</td>
+						<td>cpl (200)</td>
+						<td>bank</td>
+					</tr>
+					<tr class="lt2-rows">
+						<td>16/08/19 (15:42)</td>
+						<td>30,426 00</td>
+						<td>cpl (200)</td>
+						<td>bank</td>
+					</tr>
+					<tr class="lt2-rows">
+						<td>16/08/19 (15:42)</td>
+						<td>30,426 00</td>
+						<td>cpl (200)</td>
+						<td>bank</td>
+					</tr>
+					<tr class="lt2-rows">
+						<td>16/08/19 (15:42)</td>
+						<td>30,426 00</td>
+						<td>cpl (200)</td>
+						<td>bank</td>
+					</tr>
+					<tr class="lt2-rows">
+						<td>16/08/19 (15:42)</td>
+						<td>30,426 00</td>
+						<td>cpl (200)</td>
+						<td>bank</td>
+					</tr>
+					<trclass="lt2-rows">
+						<td>16/08/19 (15:42)</td>
+						<td>30,426 00</td>
+						<td>cpl (200)</td>
+						<td>bank</td>
+					</tr>	
+				</table>
+			</div>	
+		</div>	
+
 
   </body>
   </html>
