--- a/personal_data.html
+++ b/personal_data.html
@@ -51,34 +51,7 @@
 				<div class="quit-button">Quit</div>
 			</div>	    
 		</div>
-	</div>
-
-	<script>
-
-	'use strict'
-
-		var modal = document.getElementById('myModal');
-
-		var btn = document.getElementById("myBtn");
-
-		var span = document.getElementsByClassName("close")[0];
-
-		btn.onclick = function() {
-	  	modal.style.display = "block";
-		}	
-
-		span.onclick = function() {
-	  	modal.style.display = "none";
-		}	
-
-
-		window.onclick = function(event) {
-	  	if (event.target == modal) {
-	    modal.style.display = "none";
-	  		}
-		}
-
-	</script>	  	
+	</div>  	
 
 <!-- login modal -->
 
@@ -104,33 +77,6 @@
 
 		  	</div>
 		</div>
-
-	<script>
-
-	'use strict'
-
-		var modal2 = document.getElementById('myModal2');
-
-		var btn2 = document.getElementById("loginBtn");
-
-		var span2 = document.getElementsByClassName("close2")[0];
-
-		btn2.onclick = function() {
-	  	modal2.style.display = "block";
-		}	
-
-		span2.onclick = function() {
-	  	modal2.style.display = "none";
-		}	
-
-
-		window.onclick = function(event) {
-	  	if (event.target == modal2) {
-	    modal2.style.display = "none";
-	  		}
-		}
-
-	</script>
 
 <!-- left navbar -->
 
@@ -233,56 +179,7 @@
 	        <div class="green-dot-left"></div>
 	    </div>    
     	
-    </nav>
-
-<!-- js mobile menu script-->
-
-	<script>
-		
-		'use strict'
-
-		var hamburger = document.getElementById('hamburger');
-
-		var leftNavbar = document.getElementById('leftnav');
-
-		var container = document.getElementById('bodyGeneral');	
-
-		hamburger.addEventListener('click', function(){	leftNavbar.classList.toggle('left-nav-width');
-		});
-		
-		hamburger.addEventListener('click', function(){	container.classList.toggle('body-when-mobile-menu-open');
-		});
-
-	</script>
-
-<!-- logout button when mobile -->
-
-	<script>
-
-	'use strict'
-
-		var modal = document.getElementById('myModal');
-
-		var btn = document.getElementById("myBtnMobile");
-
-		var span = document.getElementsByClassName("close")[0];
-
-		btn.onclick = function() {
-	  	modal.style.display = "block";
-		}	
-
-		span.onclick = function() {
-	  	modal.style.display = "none";
-		}	
-
-
-		window.onclick = function(event) {
-	  	if (event.target == modal) {
-	    modal.style.display = "none";
-	  		}
-		}
-
-	</script>	
+    </nav>	
 
 <!-- container1 -->
 
@@ -432,7 +329,11 @@
 			</div>   						
 
 
+
 		</div>	
     </section>
+
+<script src="js/script.js"></script>
+    
 </body>
 </html>
